--- a/style.css
+++ b/style.css
@@ -1,19 +1,46 @@
+@media screen and (max-width: 1000px) {
+    #content,
+    aside {
+      width: 100%;
+      padding: 0;
+    }
+  }
 body {
-    background-color: #867B7B;
+    margin: 0;
+    padding: 0;
 }
-
-.container-navbar{
-    background-color: #333;
-    width: 100%;
-}
-
-.ul-navbar{
-    background-color: #eeedec;
-    width: 50%;
-    height: 100px;
-}
-
-.li-navbar{
-    border: 1px solid black;
+* {
+    box-sizing: border-box;
+  }
+header {
+     display: inline;
+  }
+.jumbotron {
+    padding: 30px;
+    background-color: #16050d;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+  }
+nav {
+    background-color: #410971;
+    padding: 5px;
+    position: sticky;
+    top: 0;
+ }
+ nav li {
+    display: inline;
     list-style-type: none;
-}
+    margin-right: 20px;
+    background-color: #410971;
+    padding: 5px;
+ }
+ nav a {
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: none;
+    color: white;
+  }
+  nav a:hover{
+     font-weight: bold;
+  }
